00_backup/eksdev/devops/monitoring/prometheus/prometheus-svc-ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
   #service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
   #service.beta.kubernetes.io/aws-load-balancer-internal: "true"

spec:
  selector:
    app: prometheus-server
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
