00_backup/eksdev/devops/monitoring/prometheus/prometheus-istio-gw-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gw
  namespace: monitoring
spec:
  selector:
    istio: devops-istio-ingressgateway
  servers:
  - hosts:
    - eks-prometheus.klsdev.kakaoinsure.net
    port:
      name: prometheus
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  gateways:
  - prometheus-gw
  hosts:
  - prometheus.monitoring.svc.cluster.local
  - eks-prometheus.klsdev.kakaoinsure.net
  http:
  - route:
    - destination:
        host: prometheus.monitoring.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus-dr
  namespace: monitoring
spec:
  host: prometheus.monitoring.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 50s
